--- a/midterm/midterm.css
+++ b/midterm/midterm.css
@@ -1,9 +1,9 @@
 table {
-	width: 80%;
+	width: 70%;
 	margin: 10px;
 	border-collapse: collapse;
   border-spacing: 10px 5px;
-	text-align: center;
+	text-align: left;
   border: solid 1px #333
 }
 
